syntax = "proto3";

package imageworker;

option go_package = ".;pb";

import "google/api/annotations.proto";

message UploadRequest {
    bytes image_data = 1;
    string filename = 2;
}

message UploadResponse {
    string image_id = 1;
    string created_at = 2;
}

message InformRequest {
    string all_images = 1;
}

message InformResponse {
    ImageInfo image_info = 1;
}

message ImageInfo {
    string image_id = 1;
    string created_at = 2;
    string changed_at = 3;
    string path = 4;
}

message DownloadRequest {
    int64 image_id = 1;
}

message DownloadResponse {
    bytes image_data = 1;
}

service ImageWorker{
    rpc UploadImage(stream UploadRequest) returns (UploadResponse) {
        option (google.api.http) = {
            post : "/upload_image"
            body : "*"
          };
    };
    rpc InformImage(InformRequest) returns (InformResponse);
    rpc DownloadImage(DownloadRequest) returns (DownloadResponse);   
}